--- a/src/OAjsp/tree/tree.css
+++ b/src/OAjsp/tree/tree.css
@@ -10,6 +10,11 @@ body{
     border-collapse: collapse;
 }
 
+.table2{
+    height: 85%;
+    overflow: auto;
+}
+
 .tableBody tr{
     height: 40px;
 }
@@ -18,9 +23,10 @@ body{
     /*padding-left: 30px;*/
     cursor: pointer;
     border-bottom: 1px dashed rgb(233, 233, 233);
+    border-top: 1px dashed rgb(233, 233, 233);
 }
 
-.tableBody tr:hover {
+.table2>.tableBody tr:hover {
     background: #DEF0FF;
 }
 
@@ -30,7 +36,7 @@ body{
 }
 /*------------------------------*/
 .wea-left-right-layout {
-    height: 100%;
+    height: 99%;
     overflow: hidden;
     background-color: #fff;
     -webkit-transition: padding 0.1s ease-in-out;
@@ -135,6 +141,6 @@ body{
 
 .weleft {
     width: 250px;
-    overflow: auto;
+    /*overflow: auto;*/
     margin-left: 10px;
 }
